# AyaShield

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  shield.py
backend/app/db/: supabase.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: schemas.py
backend/app/services/: shield.py
backend/app/services/ai/: gemini.py
backend/app/services/chains/: abi_database.py  base.py  evm.py
backend/app/services/receipt/: generator.py  svg_template.py
backend/app/services/revoke/: scanner.py
backend/app/services/security/: contract_analyzer.py  risk_scoring.py  scam_database.py
database/: README.md
database/migrations/: 001_initial.sql
frontend/: .env.local.example  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/layout/: footer.tsx  navbar.tsx
frontend/src/components/shield/: panic-button.tsx  receipt-card.tsx  risk-gauge.tsx  transaction-card.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/supabase/: client.ts  server.ts
frontend/src/types/: index.ts
(+6 files in other folders)
